--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+}
+section{
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+    /* background-color: aqua; */
+    height: 100vh;
+
+}
+form{
+    text-align: center;
+    line-height: 40px;
+}
+form label{
+    font-size: 20px;
+    font-weight: bold;
+}
+form input{
+    font-size: 18px;
+    padding: 0px 5px;
+}
+form button{
+ padding: 2px 5px;
+ font-size: 18px;
+}
+form button:hover{
+   box-shadow: 0px 0px 10px 1px black;
+}
+section>article{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 100%;
+    height: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+section>article>article{
+    text-align: center;
+    background-image: url('https://content.maltatoday.com.mt/ui_frontend/thumbnail/684/0/sunshine.png');
+    padding: 10px 20px;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+section>article>article h1{
+    font-size: 30px;
+
+}
+section>article>article p{
+    font-size: 20px;
+}
+section>article>article span{
+font-weight: bold;
+}
+section>article>article p:nth-of-type(1){
+    font-size: 26px;
+}
+.error{
+    text-align: center;
+}
+
