--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,7 @@ section>article{
     gap: 20px;
     width: 100%;
     height: 100%;
+    
 }
 
 section>article>article{
@@ -62,5 +63,6 @@ section>article>article p:nth-of-type(1){
 }
 .error{
     text-align: center;
+    color: red;
 }
 
