--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,8 @@ section>article{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     
 }
 
@@ -43,8 +43,8 @@ section>article>article{
     text-align: center;
     background-image: url('https://content.maltatoday.com.mt/ui_frontend/thumbnail/684/0/sunshine.png');
     padding: 10px 20px;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
